--- a/style.css
+++ b/style.css
@@ -27,6 +27,13 @@
 /* definindo que até essa largura (tablet) os elementos aqui dentro terão as configs que irei colocar */
 @media screen and (max-width: 768px) {
   .formulario h5 {
-    font-size: .9em;
+    font-size: 1em;
   }
+}
+
+/* para poder manipular o elemento corretamente com o flex, quero essa largura pra ele apenas nessas telas */
+@media screen and (min-width: 1200px) {
+    .formulario {
+        width: 50vw;
+    }
 }
