--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+/* configurações padrões css */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+/* garantindo que o body e html utilizem 100% da sua altura dísponivel, fazendo com que o footer fique alocado na parte inferior da página corretamente */
+body, html {
+    height: 100%;
+}
+
 :root {
     --cor-botao-ver-mais: #9353FF;
     --cor-e-icone-rodape: #DAFF01;
